# qt-ext

./: .gitignore  CMakeLists.txt  README.md  hcore.lib  hcored.lib  hgui.lib  hguid.lib  hutilsd.lib  hwidget.lib  main.cpp  mainwindow.cpp  sdk.cmake.inc
include/hcore/: hcore.h  hcore_global.h  hcrypto.h
include/hgui/: hgui_global.h
include/hutils/: hpalettedesign.h  hutils_global.h
include/hwidget/: QtAwesomeEnumGenerated.h  QtAwesomeStringGenerated.h  hcodeedit.h  hdrawer.h  hfontawesome.h  hiconfont.h  hreveal.h  hswitchbutton.h  htabbar.h
sdk/: CMakeLists.txt  hcore.lib  hcored.lib  hgui.lib  hguid.lib  hutils.lib  hvision.lib  hvisiond.lib  hwidget.lib  hwidgetd.lib
sdk/include/: h_global.h
sdk/include/hcore/: hcompression.h  hcore_global.h  hcrypto.h  hcryptographichash.h  hencoding.h  hfontfileutil.h  hhomomorhpicencryption.h  hotp.h  hrandom.h
sdk/include/hgui/: hgui.h  hgui_global.h
sdk/include/hutils/: hutils.h
sdk/include/hvision/: hvision.h  hvision_global.h
sdk/include/hwidget/: hdrawer.h  hflowlayout.h  hglobalmousegrabber.h  hpalettedesign.h  hplaceholderlayout.h  hreveal.h  hsteganography.h  hwidget.h  hwidget_global.h
